After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 752490 - Fix returned type for BIN HEX
Fix returned type for BIN HEX
Status: RESOLVED FIXED
Product: GUPnP
Classification: Other
Component: gupnp
0.20.x
Other Linux
: Normal minor
: ---
Assigned To: GUPnP Maintainers
GUPnP Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-07-16 13:31 UTC by Guillaume Marquebielle
Modified: 2015-07-16 19:48 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch fixing the issue (872 bytes, patch)
2015-07-16 13:31 UTC, Guillaume Marquebielle
committed Details | Review

Description Guillaume Marquebielle 2015-07-16 13:31:01 UTC
Created attachment 307555 [details] [review]
Patch fixing the issue

Wrong gtype returned for data type bin.hex
Comment 1 Jens Georg 2015-07-16 14:29:00 UTC
Review of attachment 307555 [details] [review]:

+1