Fix returned type for BIN HEX

https://bugzilla.gnome.org/show_bug.cgi?id=752490